Test for remote mass deletion and change to safe profile, refs #1022

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -849,6 +849,8 @@ member.me=Me
 member.non_mutual_friend=None mutual friend
 member.onlan=On LAN
 member.supernode=Supernode
+member.mass_delete.warning_title=Mass deletion detected
+member.mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 
 mp3_file_info.album=Album
 mp3_file_info.artist=Artist
@@ -1005,6 +1007,8 @@ preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow network (this ma
 preferences.dialog.use_delta_on_lan=Use delta sync on LAN
 preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 preferences.dialog.use_recycle_bin=Use recycle bin (default)
+preferences.dialog.use_mass_delete=Use mass delete protection
+preferences.dialog.mass_delete_threshold=Mass delete threshold
 preferences.dialog.use_zip_on_lan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
 preferences.dialog.use_zip_on_lan=Use ZIP compression on LAN
 preferences.dialog.verbose=Enable debug logging
