Auto cleanup slider for downloads, refs #1494

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -506,6 +506,8 @@ debug_information_card.title=Debug
 downloads_information_card.title=Downloads
 downloads_information_card.auto_cleanup.name=Auto-cleanup
 downloads_information_card.auto_cleanup.description=Clean up any downloads when they complete
+downloads_information_card.auto_cleanup.immediate=Immediate
+downloads_information_card.auto_cleanup.days={0} day(s)
 
 download.busy.description=Downloading files from other PowerFolder to your folder
 download.busy.title=Downloading file
