--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1151,6 +1151,8 @@ transfers.verifying=Finalizing
 uploads_information_card.title=Uploads
 uploads_information_card.auto_cleanup.name=Auto-cleanup
 uploads_information_card.auto_cleanup.description=Clean up any uploads when they complete
+uploads_information_card.auto_cleanup.immediate=Immediate
+uploads_information_card.auto_cleanup.days={0} day(s)
 
 user.dir.contacts=Contacts
 user.dir.custom=Custom
