#1307 (First time click on "X" should ask for: Exit App or Minimize to system tray), Now only Minimize and Exit buttons are shown.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -424,8 +424,10 @@ dialog.ask_for_friendship.explain=You can easily change the friend\nstatus using
 dialog.ask_for_friendship.message_title=Message from {0}
 dialog.ask_for_friendship.title=Add {0} to friend list
 
-dialog.ask_for_quit_on_x.text=Minimize to tray on close
+dialog.ask_for_quit_on_x.Minimize_button=Minimize
+dialog.ask_for_quit_on_x.Exit_button=Exit
 dialog.ask_for_quit_on_x.title=Minimize to tray option
+dialog.ask_for_quit_on_x.text=Should PowerFolder be minimized to system tray or exited?
 
 dialog.already_running.exit_button=Exit
 dialog.already_running.start_button=Start anyways
