--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -632,10 +632,10 @@ folder_create.recycle_error.text=Unable to create recycle bin for folder {0}
 folder_create.dialog.select_file.text=Select file
 folder_create.progress.text=Creating PowerFolder '{0}'
 
-folder.empty_folder.title=All files deleted
-folder.empty_folder.message=All files in folder {0} have been deleted.\n\nWhat would you like to do?
-folder.empty_folder.stop_managing=Stop managing locally
-folder.empty_folder.send_deletions=Broadcast file deletions
+uicontroller.empty_folder.title=All files deleted
+uicontroller.empty_folder.message=All files in folder {0} have been deleted.\n\nWhat would you like to do?
+uicontroller.empty_folder.stop_managing=Stop managing locally
+uicontroller.empty_folder.send_deletions=Broadcast file deletions
 
 folder_exception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
 folder_exception.dialog.title=Problem with PowerFolder '{0}'
