Tip of the day in splah screen. Fixes #1211

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1082,8 +1082,6 @@ settings_tab.preview_warning_message=Do you want to convert this folder to a pre
 settings_tab.preview_warning_convert=Convert
 settings_tab.delete_folder=Delete folder
 
-splash.version=Version {0}
-
 status.download.text=Data download rate
 status.download=%.2f KB/s
 status.port.text=PowerFolder connection port number
@@ -1118,6 +1116,11 @@ systray.tooltip.in_sync=in sync
 systray.tooltip.syncing=syncing
 systray.tooltip.up.mb=Up {0} MBs
 systray.tooltip.up=Up {0} KBs
+
+tip_of_the_day.length=3
+tip_of_the_day.text_1=Demo Tip of the Day 1
+tip_of_the_day.text_2=Demo Tip of the Day 2
+tip_of_the_day.text_3=Demo Tip of the Day 3
 
 transfer.problem.broken.download=The transfer download was broken
 transfer.problem.broken.upload=The transfer upload was broken
