View now uses this lastSyncDate, more real than result of estimater. And fix blank gif. Refs #1499

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -533,6 +533,7 @@ exp_folder_view.folder_online_text=Online folder
 exp_folder_view.folder_local_online_text=Local folder, backed up online
 exp_folder_view.folder_preview_text=Preview folder
 exp_folder_view.members=Members: {0}
+exp_folder_view.never_synchronized=Never synchronized
 exp_folder_view.synchronized={0}% synchronized
 exp_folder_view.transfer_mode=Transfer mode: {0}
 exp_folder_view.local={0} local
