Add folder warning preference. Refs #1499

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -955,6 +955,8 @@ preferences.dialog.errorShrinkButton=<<
 preferences.dialog.exit_behavior.exit=Exit program
 preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior=Exit behavior
+preferences.dialog.folder_sync_warn.use=Warn if folders not synchronized
+preferences.dialog.folder_sync_text=Warning day(s)
 preferences.dialog.general.title=General
 preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.language=Language
