--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -48,3 +48,10 @@ action_stop_online_storage.icon=icons/StopOnlineFolder.png
 action_stop_preview_folder.icon=icons/StopPreviewFolder.png
 action_sync_folder.icon=icons/Sync.png
 action_pause_sync.icon=icons/Suspend.gif
+
+arrow_left.icon=icons/ArrowLeft.gif
+arrow_right.icon=icons/ArrowRight.gif
+sleep.icon=icons/Sleep.png
+wake_up.icon=icons/WakeUp.png
+mac.icon=icons/Mac.gif
+checked.icon=icons/Checked.gif
