Cache some more icons, refs #1320

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -55,3 +55,10 @@ sleep.icon=icons/Sleep.png
 wake_up.icon=icons/WakeUp.png
 mac.icon=icons/Mac.gif
 checked.icon=icons/Checked.gif
+filter_text_field_clear_button_normal.icon=icons/FilterTextFieldClearButtonNormal.png
+filter_text_field_clear_button_hover.icon=icons/FilterTextFieldClearButtonHover.png
+filter_text_field_clear_button_push.icon=icons/FilterTextFieldClearButtonPush.png
+filter_text_field_glass.icon=icons/FilterTextFieldGlass.png
+blank.icon=icons/Blank.gif
+warning.icon=icons/Warning.png
+bug.icon=icons/Bug.png
