Cache some more icons, refs #1320

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -62,3 +62,14 @@ filter_text_field_glass.icon=icons/FilterTextFieldGlass.png
 blank.icon=icons/Blank.gif
 warning.icon=icons/Warning.png
 bug.icon=icons/Bug.png
+updates.icon=icons/Updates.gif
+system_monitor.icon=icons/SystemMonitor.png
+dialog.icon=icons/Dialog.gif
+stop.icon=icons/Abort.gif
+play.icon=icons/Play.gif
+suspend.icon=icons/Suspend.gif
+home.icon=icons/Home.png
+add.icon=icons/Add.png
+edit.icon=icons/Edit.png
+delete.icon=icons/Delete.gif
+force_update.icon=icons/ForceUpdate.png
