More icon caching, refs #1320

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -73,3 +73,12 @@ add.icon=icons/Add.png
 edit.icon=icons/Edit.png
 delete.icon=icons/Delete.gif
 force_update.icon=icons/ForceUpdate.png
+unknown.icon=icons/Unknown.gif
+chat.icon=icons/Chat.gif
+settings.icon=icons/Settings.png
+advanced.icon=icons/Advanced.png
+information.icon=icons/information.png
+computer.icon=icons/Computer.png
+friends.icon=icons/pictos/Friends.png
+new_folder.icon=icons/pictos/NewFolder-48.png
+join_folder.icon=icons/pictos/JoinFolder-48.png
