More icon caching, refs #1320

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -80,5 +80,8 @@ advanced.icon=icons/Advanced.png
 information.icon=icons/information.png
 computer.icon=icons/Computer.png
 friends.icon=icons/pictos/Friends.png
-new_folder.icon=icons/pictos/NewFolder-48.png
-join_folder.icon=icons/pictos/JoinFolder-48.png
+new_folder_48.icon=icons/pictos/NewFolder-48.png
+join_folder_48.icon=icons/pictos/JoinFolder-48.png
+sync_48.icon=icons/pictos/Sync-48.png
+leave_folder_48.icon=icons/pictos/LeaveFolder-48.png
+preferences.icon=icons/Preferences.png
