More icon caching, refs #1320

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -85,3 +85,16 @@ join_folder_48.icon=icons/pictos/JoinFolder-48.png
 sync_48.icon=icons/pictos/Sync-48.png
 leave_folder_48.icon=icons/pictos/LeaveFolder-48.png
 preferences.icon=icons/Preferences.png
+preferences_picto.icon=icons/pictos/Preferences.png
+sync.icon=icons/Sync.png
+question.icon=icons/Question.gif
+sort_up.icon=icons/SortUp.gif
+sort_down.icon=icons/SortDown.gif
+sort_blank.icon=icons/SortBlank.gif
+dyn_dns.icon=icons/DynDns.gif
+directory.icon=icons/Directory.gif
+directory_open.icon=icons/DirectoryOpen.gif
+directory_gray.icon=icons/Directory_gray.gif
+directory_open_gray.icon=icons/Directory_open_gray.gif
+directory_red.icon=icons/Directory_red.gif
+directory_open_red.icon=icons/Directory_open_red.gif
