More icon caching, refs #1320

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -98,3 +98,13 @@ directory_gray.icon=icons/Directory_gray.gif
 directory_open_gray.icon=icons/Directory_open_gray.gif
 directory_red.icon=icons/Directory_red.gif
 directory_open_red.icon=icons/Directory_open_red.gif
+node_friend_connected.icon=icons/NodeFriendConnected.gif
+node_friend_disconnected.icon=icons/NodeFriendDisconnected.gif
+node_non_friend_connected.icon=icons/NodeNonFriendConnected.gif
+node_non_friend_disconnected.icon=icons/NodeNonFriendDisconnected.gif
+folder.icon=icons/Folder.png
+files.icon=icons/Files.png
+local_folder.icon=icons/LocalFolder.png
+local_and_online_folder.icon=icons/LocalAndOnlineFolder.png
+online_folder.icon=icons/OnlineFolder.png
+preview_folder.icon=icons/PreviewFolder.png
