Cache some more icons, refs #1320

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -108,3 +108,19 @@ local_folder.icon=icons/LocalFolder.png
 local_and_online_folder.icon=icons/LocalAndOnlineFolder.png
 online_folder.icon=icons/OnlineFolder.png
 preview_folder.icon=icons/PreviewFolder.png
+black_list.icon=icons/BlackList.gif
+white_list.icon=icons/WhiteList.gif
+download.icon=icons/Download.png
+download_active.icon=icons/Download_active.gif
+folder_sync_unknown.icon=icons/FolderSync_unknown.gif
+folder_sync_0.icon=icons/FolderSync_0.gif
+folder_sync_1.icon=icons/FolderSync_1.gif
+folder_sync_2.icon=icons/FolderSync_2.gif
+folder_sync_3.icon=icons/FolderSync_3.gif
+connected_bright.icon=icons/ConnectBright.png
+connected_not.icon=icons/ConnectNot.png
+web_service.icon=icons/WebService.png
+sync_pc_picto.icon=icons/pictos/SyncPC.gif
+project_work_picto.icon=icons/pictos/ProjectWork.gif
+file_share_picto.icon=icons/pictos/FileShare.gif
+web_service_picto.icon=icons/pictos/WebService.png
