--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -112,6 +112,10 @@ black_list.icon=icons/BlackList.gif
 white_list.icon=icons/WhiteList.gif
 download.icon=icons/Download.png
 download_active.icon=icons/Download_active.gif
+upload.icon=icons/Upload.png
+upload_active.icon=icons/UploadActive.gif
+inactive.icon=icons/Inactive.gif
+expected.icon=icons/Expected.gif
 folder_sync_unknown.icon=icons/FolderSync_unknown.gif
 folder_sync_0.icon=icons/FolderSync_0.gif
 folder_sync_1.icon=icons/FolderSync_1.gif
