Cache some more icons, refs #1320

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -1,5 +1,5 @@
 systray.default.icon=icons/PowerFolder32x32.gif
-about.animation=icons/about/AboutAnimation.gif
+about_animation.icon=icons/about/AboutAnimation.gif
 powerfolder32x32.icon=icons/PowerFolder32x32.gif
 splash.icon=icons/Splash.png
 picto.logo.icon=icons/pictos/PowerFolderLogo96x96.png
@@ -128,3 +128,13 @@ sync_pc_picto.icon=icons/pictos/SyncPC.gif
 project_work_picto.icon=icons/pictos/ProjectWork.gif
 file_share_picto.icon=icons/pictos/FileShare.gif
 web_service_picto.icon=icons/pictos/WebService.png
+power_folder_logo_400_ui.icon=icons/pictos/PowerFolderLogo400UI.png
+user_picto.icon=icons/pictos/User.png
+upload_picto.icon=icons/pictos/Upload.png
+download_picto.icon=icons/pictos/Download.png
+my_folders_picto.icon=icons/pictos/MyFolders.png
+folder_picto.icon=icons/pictos/Folder.png
+recycle_bin_picto.icon=icons/pictos/RecycleBin.png
+web_service_quick_info.icon=icons/pictos/WebServiceQuickInfo.png
+pro_logo.icon=icons/ProLogo.png
+powerfolder_32.icon=powerfolder32x32.icon
