Sync button icons, refs #1320

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -138,3 +138,58 @@ recycle_bin_picto.icon=icons/pictos/RecycleBin.png
 web_service_quick_info.icon=icons/pictos/WebServiceQuickInfo.png
 pro_logo.icon=icons/ProLogo.png
 powerfolder_32.icon=powerfolder32x32.icon
+
+sync_push_00.icon=icons/sync/push/sync_00.png
+sync_push_01.icon=icons/sync/push/sync_01.png
+sync_push_02.icon=icons/sync/push/sync_02.png
+sync_push_03.icon=icons/sync/push/sync_03.png
+sync_push_04.icon=icons/sync/push/sync_04.png
+sync_push_05.icon=icons/sync/push/sync_05.png
+sync_push_06.icon=icons/sync/push/sync_06.png
+sync_push_07.icon=icons/sync/push/sync_07.png
+sync_push_08.icon=icons/sync/push/sync_08.png
+sync_push_09.icon=icons/sync/push/sync_09.png
+sync_push_10.icon=icons/sync/push/sync_10.png
+sync_push_11.icon=icons/sync/push/sync_11.png
+sync_push_12.icon=icons/sync/push/sync_12.png
+sync_push_13.icon=icons/sync/push/sync_13.png
+sync_push_14.icon=icons/sync/push/sync_14.png
+sync_push_15.icon=icons/sync/push/sync_15.png
+sync_push_16.icon=icons/sync/push/sync_16.png
+sync_push_17.icon=icons/sync/push/sync_17.png
+sync_hover_00.icon=icons/sync/hover/sync_00.png
+sync_hover_01.icon=icons/sync/hover/sync_01.png
+sync_hover_02.icon=icons/sync/hover/sync_02.png
+sync_hover_03.icon=icons/sync/hover/sync_03.png
+sync_hover_04.icon=icons/sync/hover/sync_04.png
+sync_hover_05.icon=icons/sync/hover/sync_05.png
+sync_hover_06.icon=icons/sync/hover/sync_06.png
+sync_hover_07.icon=icons/sync/hover/sync_07.png
+sync_hover_08.icon=icons/sync/hover/sync_08.png
+sync_hover_09.icon=icons/sync/hover/sync_09.png
+sync_hover_10.icon=icons/sync/hover/sync_10.png
+sync_hover_11.icon=icons/sync/hover/sync_11.png
+sync_hover_12.icon=icons/sync/hover/sync_12.png
+sync_hover_13.icon=icons/sync/hover/sync_13.png
+sync_hover_14.icon=icons/sync/hover/sync_14.png
+sync_hover_15.icon=icons/sync/hover/sync_15.png
+sync_hover_16.icon=icons/sync/hover/sync_16.png
+sync_hover_17.icon=icons/sync/hover/sync_17.png
+sync_normal_00.icon=icons/sync/normal/sync_00.png
+sync_normal_01.icon=icons/sync/normal/sync_01.png
+sync_normal_02.icon=icons/sync/normal/sync_02.png
+sync_normal_03.icon=icons/sync/normal/sync_03.png
+sync_normal_04.icon=icons/sync/normal/sync_04.png
+sync_normal_05.icon=icons/sync/normal/sync_05.png
+sync_normal_06.icon=icons/sync/normal/sync_06.png
+sync_normal_07.icon=icons/sync/normal/sync_07.png
+sync_normal_08.icon=icons/sync/normal/sync_08.png
+sync_normal_09.icon=icons/sync/normal/sync_09.png
+sync_normal_10.icon=icons/sync/normal/sync_10.png
+sync_normal_11.icon=icons/sync/normal/sync_11.png
+sync_normal_12.icon=icons/sync/normal/sync_12.png
+sync_normal_13.icon=icons/sync/normal/sync_13.png
+sync_normal_14.icon=icons/sync/normal/sync_14.png
+sync_normal_15.icon=icons/sync/normal/sync_15.png
+sync_normal_16.icon=icons/sync/normal/sync_16.png
+sync_normal_17.icon=icons/sync/normal/sync_17.png
