Sync button icons, refs #1320

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -1,9 +1,3 @@
-systray.default.icon=icons/PowerFolder32x32.gif
-about_animation.icon=icons/about/AboutAnimation.gif
-powerfolder32x32.icon=icons/PowerFolder32x32.gif
-splash.icon=icons/Splash.png
-picto.logo.icon=icons/pictos/PowerFolderLogo96x96.png
-
 # this section contains the images used in actions
 
 action_abort_download.icon=icons/Abort.gif
@@ -49,114 +43,105 @@ action_stop_preview_folder.icon=icons/StopPreviewFolder.png
 action_sync_folder.icon=icons/Sync.png
 action_pause_sync.icon=icons/Suspend.gif
 
+# general icons
+
+about_animation.icon=icons/about/AboutAnimation.gif
+add.icon=icons/Add.png
+advanced.icon=icons/Advanced.png
 arrow_left.icon=icons/ArrowLeft.gif
 arrow_right.icon=icons/ArrowRight.gif
-sleep.icon=icons/Sleep.png
-wake_up.icon=icons/WakeUp.png
-mac.icon=icons/Mac.gif
-checked.icon=icons/Checked.gif
-filter_text_field_clear_button_normal.icon=icons/FilterTextFieldClearButtonNormal.png
-filter_text_field_clear_button_hover.icon=icons/FilterTextFieldClearButtonHover.png
-filter_text_field_clear_button_push.icon=icons/FilterTextFieldClearButtonPush.png
-filter_text_field_glass.icon=icons/FilterTextFieldGlass.png
-blank.icon=icons/Blank.gif
-warning.icon=icons/Warning.png
-bug.icon=icons/Bug.png
-updates.icon=icons/Updates.gif
-system_monitor.icon=icons/SystemMonitor.png
-dialog.icon=icons/Dialog.gif
-stop.icon=icons/Abort.gif
-play.icon=icons/Play.gif
-suspend.icon=icons/Suspend.gif
-home.icon=icons/Home.png
-add.icon=icons/Add.png
-edit.icon=icons/Edit.png
-delete.icon=icons/Delete.gif
-force_update.icon=icons/ForceUpdate.png
-unknown.icon=icons/Unknown.gif
-chat.icon=icons/Chat.gif
-settings.icon=icons/Settings.png
-advanced.icon=icons/Advanced.png
-information.icon=icons/information.png
-computer.icon=icons/Computer.png
-friends.icon=icons/pictos/Friends.png
-new_folder_48.icon=icons/pictos/NewFolder-48.png
-join_folder_48.icon=icons/pictos/JoinFolder-48.png
-sync_48.icon=icons/pictos/Sync-48.png
-leave_folder_48.icon=icons/pictos/LeaveFolder-48.png
-preferences.icon=icons/Preferences.png
-preferences_picto.icon=icons/pictos/Preferences.png
-sync.icon=icons/Sync.png
-question.icon=icons/Question.gif
-sort_up.icon=icons/SortUp.gif
-sort_down.icon=icons/SortDown.gif
-sort_blank.icon=icons/SortBlank.gif
-dyn_dns.icon=icons/DynDns.gif
-directory.icon=icons/Directory.gif
-directory_open.icon=icons/DirectoryOpen.gif
-directory_gray.icon=icons/Directory_gray.gif
-directory_open_gray.icon=icons/Directory_open_gray.gif
-directory_red.icon=icons/Directory_red.gif
-directory_open_red.icon=icons/Directory_open_red.gif
-node_friend_connected.icon=icons/NodeFriendConnected.gif
-node_friend_disconnected.icon=icons/NodeFriendDisconnected.gif
-node_non_friend_connected.icon=icons/NodeNonFriendConnected.gif
-node_non_friend_disconnected.icon=icons/NodeNonFriendDisconnected.gif
-folder.icon=icons/Folder.png
-files.icon=icons/Files.png
-local_folder.icon=icons/LocalFolder.png
-local_and_online_folder.icon=icons/LocalAndOnlineFolder.png
-online_folder.icon=icons/OnlineFolder.png
-preview_folder.icon=icons/PreviewFolder.png
 black_list.icon=icons/BlackList.gif
-white_list.icon=icons/WhiteList.gif
+blank.icon=icons/Blank.gif
+bug.icon=icons/Bug.png
+chat.icon=icons/Chat.gif
+checked.icon=icons/Checked.gif
+computer.icon=icons/Computer.png
+connected_bright.icon=icons/ConnectBright.png
+connected_not.icon=icons/ConnectNot.png
+delete.icon=icons/Delete.gif
+dialog.icon=icons/Dialog.gif
+directory.icon=icons/Directory.gif
+directory_gray.icon=icons/Directory_gray.gif
+directory_open.icon=icons/DirectoryOpen.gif
+directory_open_gray.icon=icons/Directory_open_gray.gif
+directory_open_red.icon=icons/Directory_open_red.gif
+directory_red.icon=icons/Directory_red.gif
 download.icon=icons/Download.png
 download_active.icon=icons/Download_active.gif
-upload.icon=icons/Upload.png
-upload_active.icon=icons/UploadActive.gif
-inactive.icon=icons/Inactive.gif
+download_picto.icon=icons/pictos/Download.png
+dyn_dns.icon=icons/DynDns.gif
+edit.icon=icons/Edit.png
 expected.icon=icons/Expected.gif
-folder_sync_unknown.icon=icons/FolderSync_unknown.gif
+file_share_picto.icon=icons/pictos/FileShare.gif
+files.icon=icons/Files.png
+filter_text_field_clear_button_hover.icon=icons/FilterTextFieldClearButtonHover.png
+filter_text_field_clear_button_normal.icon=icons/FilterTextFieldClearButtonNormal.png
+filter_text_field_clear_button_push.icon=icons/FilterTextFieldClearButtonPush.png
+filter_text_field_glass.icon=icons/FilterTextFieldGlass.png
+folder.icon=icons/Folder.png
+folder_picto.icon=icons/pictos/Folder.png
 folder_sync_0.icon=icons/FolderSync_0.gif
 folder_sync_1.icon=icons/FolderSync_1.gif
 folder_sync_2.icon=icons/FolderSync_2.gif
 folder_sync_3.icon=icons/FolderSync_3.gif
-connected_bright.icon=icons/ConnectBright.png
-connected_not.icon=icons/ConnectNot.png
-web_service.icon=icons/WebService.png
-sync_pc_picto.icon=icons/pictos/SyncPC.gif
-project_work_picto.icon=icons/pictos/ProjectWork.gif
-file_share_picto.icon=icons/pictos/FileShare.gif
-web_service_picto.icon=icons/pictos/WebService.png
-power_folder_logo_400_ui.icon=icons/pictos/PowerFolderLogo400UI.png
-user_picto.icon=icons/pictos/User.png
-upload_picto.icon=icons/pictos/Upload.png
-download_picto.icon=icons/pictos/Download.png
+folder_sync_unknown.icon=icons/FolderSync_unknown.gif
+force_update.icon=icons/ForceUpdate.png
+friends.icon=icons/pictos/Friends.png
+home.icon=icons/Home.png
+inactive.icon=icons/Inactive.gif
+information.icon=icons/information.png
+join_folder_48.icon=icons/pictos/JoinFolder-48.png
+leave_folder_48.icon=icons/pictos/LeaveFolder-48.png
+local_and_online_folder.icon=icons/LocalAndOnlineFolder.png
+local_folder.icon=icons/LocalFolder.png
+mac.icon=icons/Mac.gif
 my_folders_picto.icon=icons/pictos/MyFolders.png
-folder_picto.icon=icons/pictos/Folder.png
-recycle_bin_picto.icon=icons/pictos/RecycleBin.png
-web_service_quick_info.icon=icons/pictos/WebServiceQuickInfo.png
-pro_logo.icon=icons/ProLogo.png
+new_folder_48.icon=icons/pictos/NewFolder-48.png
+node_friend_connected.icon=icons/NodeFriendConnected.gif
+node_friend_disconnected.icon=icons/NodeFriendDisconnected.gif
+node_non_friend_connected.icon=icons/NodeNonFriendConnected.gif
+node_non_friend_disconnected.icon=icons/NodeNonFriendDisconnected.gif
+online_folder.icon=icons/OnlineFolder.png
+pac_00.icon=icons/pac/pac00.gif
+pac_01.icon=icons/pac/pac01.gif
+pac_02.icon=icons/pac/pac02.gif
+pac_03.icon=icons/pac/pac03.gif
+pac_04.icon=icons/pac/pac04.gif
+pac_05.icon=icons/pac/pac05.gif
+pac_06.icon=icons/pac/pac06.gif
+pac_07.icon=icons/pac/pac07.gif
+pac_08.icon=icons/pac/pac08.gif
+pac_09.icon=icons/pac/pac09.gif
+pac_10.icon=icons/pac/pac10.gif
+pac_11.icon=icons/pac/pac11.gif
+pac_12.icon=icons/pac/pac12.gif
+pac_13.icon=icons/pac/pac13.gif
+pac_14.icon=icons/pac/pac14.gif
+pac_15.icon=icons/pac/pac15.gif
+pac_16.icon=icons/pac/pac16.gif
+pac_dot.icon=icons/pac/pacDot.gif
+picto_logo.icon=icons/pictos/PowerFolderLogo96x96.png
+play.icon=icons/Play.gif
+power_folder_logo_400_ui.icon=icons/pictos/PowerFolderLogo400UI.png
+powerfolder32x32.icon=icons/PowerFolder32x32.gif
 powerfolder_32.icon=powerfolder32x32.icon
-
-sync_push_00.icon=icons/sync/push/sync_00.png
-sync_push_01.icon=icons/sync/push/sync_01.png
-sync_push_02.icon=icons/sync/push/sync_02.png
-sync_push_03.icon=icons/sync/push/sync_03.png
-sync_push_04.icon=icons/sync/push/sync_04.png
-sync_push_05.icon=icons/sync/push/sync_05.png
-sync_push_06.icon=icons/sync/push/sync_06.png
-sync_push_07.icon=icons/sync/push/sync_07.png
-sync_push_08.icon=icons/sync/push/sync_08.png
-sync_push_09.icon=icons/sync/push/sync_09.png
-sync_push_10.icon=icons/sync/push/sync_10.png
-sync_push_11.icon=icons/sync/push/sync_11.png
-sync_push_12.icon=icons/sync/push/sync_12.png
-sync_push_13.icon=icons/sync/push/sync_13.png
-sync_push_14.icon=icons/sync/push/sync_14.png
-sync_push_15.icon=icons/sync/push/sync_15.png
-sync_push_16.icon=icons/sync/push/sync_16.png
-sync_push_17.icon=icons/sync/push/sync_17.png
+preferences.icon=icons/Preferences.png
+preferences_picto.icon=icons/pictos/Preferences.png
+preview_folder.icon=icons/PreviewFolder.png
+pro_logo.icon=icons/ProLogo.png
+project_work_picto.icon=icons/pictos/ProjectWork.gif
+question.icon=icons/Question.gif
+recycle_bin_picto.icon=icons/pictos/RecycleBin.png
+settings.icon=icons/Settings.png
+sleep.icon=icons/Sleep.png
+sort_blank.icon=icons/SortBlank.gif
+sort_down.icon=icons/SortDown.gif
+sort_up.icon=icons/SortUp.gif
+splash.icon=icons/Splash.png
+stop.icon=icons/Abort.gif
+suspend.icon=icons/Suspend.gif
+sync.icon=icons/Sync.png
+sync_48.icon=icons/pictos/Sync-48.png
 sync_hover_00.icon=icons/sync/hover/sync_00.png
 sync_hover_01.icon=icons/sync/hover/sync_01.png
 sync_hover_02.icon=icons/sync/hover/sync_02.png
@@ -193,3 +178,36 @@ sync_normal_14.icon=icons/sync/normal/sync_14.png
 sync_normal_15.icon=icons/sync/normal/sync_15.png
 sync_normal_16.icon=icons/sync/normal/sync_16.png
 sync_normal_17.icon=icons/sync/normal/sync_17.png
+sync_pc_picto.icon=icons/pictos/SyncPC.gif
+sync_push_00.icon=icons/sync/push/sync_00.png
+sync_push_01.icon=icons/sync/push/sync_01.png
+sync_push_02.icon=icons/sync/push/sync_02.png
+sync_push_03.icon=icons/sync/push/sync_03.png
+sync_push_04.icon=icons/sync/push/sync_04.png
+sync_push_05.icon=icons/sync/push/sync_05.png
+sync_push_06.icon=icons/sync/push/sync_06.png
+sync_push_07.icon=icons/sync/push/sync_07.png
+sync_push_08.icon=icons/sync/push/sync_08.png
+sync_push_09.icon=icons/sync/push/sync_09.png
+sync_push_10.icon=icons/sync/push/sync_10.png
+sync_push_11.icon=icons/sync/push/sync_11.png
+sync_push_12.icon=icons/sync/push/sync_12.png
+sync_push_13.icon=icons/sync/push/sync_13.png
+sync_push_14.icon=icons/sync/push/sync_14.png
+sync_push_15.icon=icons/sync/push/sync_15.png
+sync_push_16.icon=icons/sync/push/sync_16.png
+sync_push_17.icon=icons/sync/push/sync_17.png
+system_monitor.icon=icons/SystemMonitor.png
+systray_default.icon=icons/PowerFolder32x32.gif
+unknown.icon=icons/Unknown.gif
+updates.icon=icons/Updates.gif
+upload.icon=icons/Upload.png
+upload_active.icon=icons/UploadActive.gif
+upload_picto.icon=icons/pictos/Upload.png
+user_picto.icon=icons/pictos/User.png
+wake_up.icon=icons/WakeUp.png
+warning.icon=icons/Warning.png
+web_service.icon=icons/WebService.png
+web_service_picto.icon=icons/pictos/WebService.png
+web_service_quick_info.icon=icons/pictos/WebServiceQuickInfo.png
+white_list.icon=icons/WhiteList.gif
