fix broken property, refs #1320

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -123,8 +123,7 @@ pac_dot.icon=icons/pac/pacDot.gif
 picto_logo.icon=icons/pictos/PowerFolderLogo96x96.png
 play.icon=icons/Play.gif
 power_folder_logo_400_ui.icon=icons/pictos/PowerFolderLogo400UI.png
-powerfolder32x32.icon=icons/PowerFolder32x32.gif
-powerfolder_32.icon=powerfolder32x32.icon
+powerfolder_32.icon=icons/PowerFolder32x32.gif
 preferences.icon=icons/Preferences.png
 preferences_picto.icon=icons/pictos/Preferences.png
 preview_folder.icon=icons/PreviewFolder.png
