--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -210,3 +210,9 @@ web_service.icon=icons/WebService.png
 web_service_picto.icon=icons/pictos/WebService.png
 web_service_quick_info.icon=icons/pictos/WebServiceQuickInfo.png
 white_list.icon=icons/WhiteList.gif
+
+# Pro related Icons
+activation_picto.icon=icons/pictos/Activation.png
+buy_now_picto.icon=icons/pictos/BuyNow.png
+buy_now_expired_picto.icon=icons/pictos/BuyNowExpired.png
+buy_now_trial_picto.icon=icons/pictos/BuyNowTrial.png
