--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1089,6 +1089,8 @@ settings_tab.preview_warning_title=Convert
 settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
 settings_tab.preview_warning_convert=Convert
 settings_tab.delete_folder=Delete folder
+settings_tab.download_script=Script after download
+settings_tab.download_script.select=Select
 
 status.download.text=Data download rate
 status.download=%.2f KB/s
