#1551 - sync eta in exit warning.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -673,8 +673,10 @@ folder_remove.dialog.sync_warning=The PowerFolder is currently synchronizing\!
 folder_remove.dialog.text=Remove PowerFolder {0}?
 folder_remove.dialog.title=Remove PowerFolder {0}?
 
-folder_repository.warn_on_close.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\n\nContinue Exit?
-folder_repository.warn_on_close.title=Continue Exit?
+folder_repository.warn_on_close.text=These folders are not synchronized yet\:\n\n\n\n{0}
+folder_repository.warn_on_close_eta.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\nETA: {1}
+folder_repository.warn_on_close.title=Synchronizing
+folder_repository.continue_exit=Continue Exit
 
 folderinfo.total_sync=Total sync
 
