Work on multi skins, refs #1320

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -962,6 +962,7 @@ preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior=Exit behavior
 preferences.dialog.folder_sync_warn.use=Warn if folders not synchronized
 preferences.dialog.folder_sync_text=Warning day(s)
+preferences.dialog.skin_text=Skin
 preferences.dialog.general.title=General
 preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.language=Language
