Home tab sync date

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -773,6 +773,7 @@ home_tab.files_uploaded=File(s) uploaded
 home_tab.folders=Folder(s)
 home_tab.in_sync=All folders are synchronized
 home_tab.sync_eta=All folders will be synchronized {0}
+home_tab.never_synced=No folders synchronized
 home_tab.last_synced=Last synchronized {0}
 home_tab.new_friend_requests=New friend request(s)
 home_tab.new_single_file_offers=New single file offer(s)
