Some minor UI enhancements

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -532,13 +532,15 @@ exp_folder_view.folder_local_text=Local folder
 exp_folder_view.folder_online_text=Online folder
 exp_folder_view.folder_local_online_text=Local folder, backed up online
 exp_folder_view.folder_preview_text=Preview folder
-exp_folder_view.members=Members: {0}
+exp_folder_view.members=Members: {0} ({1} connected)
 exp_folder_view.never_synchronized=Never synchronized
+exp_folder_view.unsynchronized=Unsynchronized
+exp_folder_view.unsynchronized.tip=There are no connected folder members
 exp_folder_view.synchronized={0}% synchronized
 exp_folder_view.transfer_mode=Transfer mode: {0}
 exp_folder_view.local={0} local
 exp_folder_view.total={0} total
-exp_folder_view.recycled={0} file(s) ({1}) in recycle bin
+exp_folder_view.recycled={0} file(s) ({1} in recycle bin)
 exp_folder_view.not_yet_scanned=Not yet scanned
 exp_folder_view.no_recycled=Recycle bin not used
 exp_folder_view.files_available_tip=Display the available files
@@ -773,13 +775,13 @@ home_tab.files_uploaded=File(s) uploaded
 home_tab.folders=Folder(s)
 home_tab.in_sync=All folders are synchronized
 home_tab.sync_eta=All folders will be synchronized {0}
-home_tab.never_synced=No folders synchronized
+home_tab.none_synced=No folders synchronized
+home_tab.no_folders=No folders configured
 home_tab.last_synced=Last synchronized {0}
 home_tab.new_friend_requests=New friend request(s)
 home_tab.new_single_file_offers=New single file offer(s)
 home_tab.new_invitations=New invitation(s)
 home_tab.no_computers=No other computers known
-home_tab.no_folders=No folders setup
 home_tab.online_storage.account=Account: {0}
 home_tab.online_storage.account.tips=Click to change account details
 home_tab.online_storage.account_connecting=Account: {0} connecting...
