Show problem icon if folder problems detected, refs #1553

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -16,6 +16,7 @@ action_delete_transfer_mode.icon=icons/Delete.gif
 action_download_file.icon=icons/Download.png
 action_edit_ignore.icon=icons/Edit.png
 action_find_computers.icon=icons/FindComputers.gif
+action_folder_problem.icon=icons/Warning.png
 action_invite_friend.icon=icons/Invite.gif
 action_join_online_storage.icon=icons/LocalAndOnlineFolder.png
 action_new_folder.icon=icons/NewFolder.png
