--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -95,6 +95,10 @@ action_find_computers.description=Search for other computers
 action_find_computers.key=F
 action_find_computers.name=Find Computers
 
+action_folder_problem.description=Display any folder problems
+action_folder_problem.key=P
+action_folder_problem.name=Folder Problems
+
 action_hide_offline.description=Offline computers will be filtered from this search result
 action_hide_offline.key=H
 action_hide_offline.name=Hide offline computers
