Wiki per settings tab, fixes #1516.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -99,6 +99,10 @@ action_folder_problem.description=Display any folder problems
 action_folder_problem.key=P
 action_folder_problem.name=Folder Problems
 
+action_help.description=Online help
+action_help.key=H
+action_help.name=Help
+
 action_hide_offline.description=Offline computers will be filtered from this search result
 action_hide_offline.key=H
 action_hide_offline.name=Hide offline computers
