--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -17,6 +17,7 @@ action_download_file.icon=icons/Download.png
 action_edit_ignore.icon=icons/Edit.png
 action_find_computers.icon=icons/FindComputers.gif
 action_folder_problem.icon=icons/Warning.png
+action_help.icon=icons/Question.gif
 action_invite_friend.icon=icons/Invite.gif
 action_join_online_storage.icon=icons/LocalAndOnlineFolder.png
 action_new_folder.icon=icons/NewFolder.png
