--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1023,6 +1023,7 @@ preferences.dialog.titleProcessing=processing...
 preferences.dialog.underline_link=Always underline links
 preferences.dialog.magnetic_frame=Move child windows with main window
 preferences.dialog.translucent_frame=Make main frame translucent
+preferences.dialog.min_to_sys_tray=Minimize to system tray
 preferences.dialog.main_on_top=Main frame stays on top of other windows
 preferences.dialog.translucent_text=Translucency
 preferences.dialog.ui.title=User Interface
