Problems tab, fixes #1553

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -131,6 +131,7 @@ preferences_picto.icon=icons/pictos/Preferences.png
 preview_folder.icon=icons/PreviewFolder.png
 pro_logo.icon=icons/ProLogo.png
 project_work_picto.icon=icons/pictos/ProjectWork.gif
+problems.icon=icons/Warning.png
 question.icon=icons/Question.gif
 recycle_bin_picto.icon=icons/pictos/RecycleBin.png
 settings.icon=icons/Settings.png
