--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -658,6 +658,8 @@ folder_information_card.members.tips=Shows folder member details
 folder_information_card.members.title=Members
 folder_information_card.settings.tips=Shows settings for this folder
 folder_information_card.settings.title=Settings
+folder_information_card.problems.title=Problems
+folder_information_card.problems.tips=Shows problems for this folder
 
 folder_join.dialog.title=Join PowerFolder {0}?
 folder_join.join.key=J
